# rag-from-scratch

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  rag.ipynb  requirements.txt
scripts/: ask.py  build_index.py  search.py
src/rag/: chunking.py  config.py  embeddings.py  ingest.py  llm.py  prompts.py  retrieval.py
static/: index.html
